fix table label row z-index issue

--- a/src/styles.css
+++ b/src/styles.css
@@ -206,7 +206,6 @@ td {
 th {
   position: sticky;
   top: 0;
-  z-index: 9;
   height: 7%;
   font-size: max(1.2vw, 12px);
   font-weight: normal;
